Refactor theme handling to support dynamic updates, ensure consistent dark mode for key panels, and improve thread safety in inventory management. Add tests for theme updates.